updating main page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>CSS Stylesheets with Relative Paths</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+  <header>
+    <h1>Student Bio</h1>
+  </header>
+
+  <div class="container">
+
+    <section id="main-bio">
+
+    <h2>Nicholas Podniestrzanski</h2>
+
+      <img src="images/IMG_20200530_131146.jpg" alt="Nick Podniestrzanski" id="bio-image">
+
+      <p>Hello, My name is Nick. I've been working in the Film/TV industry for the past 8 years. I graduated with Bacherlor's in Film from Full Sail University in 2012. I've worked for various companies, and did all sorts of video production, but most of my work as been at the Golf Channel. They decided earlier this year to move to Stamford CT. With how the industry has been changing, and having to look for new full time job. I decided to get back in to coding, and here we are in this coding bootcamp!</p>
+    </section>
+
+    <section id="contact-info">
+      <h2>Contact Info</h2>
+      <ul>
+        <li><strong>Email:</strong> <a href="mailto: Nickpodski@gmail.com">Nickpodski@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="https://github.com/Nickpodski" target="_blank">Nickpodski</a></li>
+        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+      </ul>
+    </section>
+  </div>
+
 </body>
+
 </html>
