--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS Stylesheets with Relative Paths</title>
+  <title>Nickpodski</title>
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
