--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><strong>Email:</strong> <a href="mailto: Nickpodski@gmail.com">Nickpodski@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="https://github.com/Nickpodski" target="_blank">Nickpodski</a></li>
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-        <li><strong>More About Me:</strong> <a href="https://nickpodski.github.io/About-Me/">Click Here</a></li>
+        <li><strong>More About Me:</strong> <a href="https://nickpodski.github.io/prework-about-me/">Click Here</a></li>
       </ul>
     </section>
   </div>
